added WikipediaPage class+tests, database models and config full test coverage of WikipediaPage

--- a/notebooks/database.ipynb
+++ b/notebooks/database.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2b87c67b-a9b5-49cf-a745-d0d9894bad37",
    "metadata": {},
    "outputs": [],
@@ -49,18 +49,18 @@
     "class Page(Base):\n",
     "    __tablename__ = 'pages'\n",
     "    title = Column(String(200), primary_key=True)\n",
-    "    section_headings = Column(ARRAY(String(200)))\n",
+    "    headings = Column(ARRAY(String(200)))\n",
     "    sections = Column(ARRAY(Text()))\n",
     "    links = Column(ARRAY(String(200)))\n",
     "    \n",
     "    def __repr__(self):\n",
-    "        return \"<Page(title='{}', section_headings='{}', sections={}, links={})>\"\\\n",
-    "                .format(self.title, self.section_headings, self.sections[0], self.links[:10])"
+    "        return \"<Page: (\\n\\t title='{}',\\n\\t headings[:10]={},\\n\\t sections[0]={},\\n\\t links[:10]={}\\n)>\"\\\n",
+    "                .format(self.title, self.headings[:10], self.sections[0], self.links[:10])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b8bae290-1519-4fdb-a312-d079ff191458",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,8 @@
     "# SQLAlchemy URI documentation: https://docs.sqlalchemy.org/en/14/core/engines.html#database-urls\n",
     "# Scheme: \"postgresql://<USERNAME>:<PASSWORD>@<IP_ADDRESS>:<PORT>/<DATABASE_NAME>\"\n",
     "\n",
-    "DATABASE_URI = 'postgresql://postgres:postgres@localhost:5432/wikipedia'"
+    "DATABASE_URI = 'postgresql://postgres:postgres@localhost:5432/wikipedia'\n",
+    "# don't worry this is just the local database config. no secret info is in the database running on localhost"
    ]
   },
   {
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "c9dc7c2f-8998-40ff-a1a6-005f99126533",
    "metadata": {},
    "outputs": [],
@@ -115,33 +116,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "3d09c907-3b4b-4892-ba5a-732a6e87f0d5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = Session()\n",
-    "# s.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "56721f34-9fef-4efd-9931-0b9931110541",
    "metadata": {},
    "outputs": [],
    "source": [
-    "book = Book(\n",
-    "    title='Deep Learning',\n",
-    "    author='Ian Goodfellow',\n",
-    "    pages=775,\n",
-    "    published=datetime(2016, 11, 18)\n",
+    "#     title = Column(String(200), primary_key=True)\n",
+    "#     headings = Column(ARRAY(String(200)))\n",
+    "#     sections = Column(ARRAY(Text()))\n",
+    "#     links = Column(ARRAY(String(200)))\n",
+    "\n",
+    "page = Page(\n",
+    "    title = \"Quantum Mechanics\",\n",
+    "    headings = [\"Lead\", \"Physics\", \"Science\"],\n",
+    "    sections = [\"Lead's content\", \"Science's content\", \"Physics's content\"],\n",
+    "    links = [\"Albert Einstein\", \"String Theory\", \"Physics Theories\"]\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "aec3e2be-1995-4978-ac46-fcbc27e809ea",
    "metadata": {},
    "outputs": [],
@@ -152,99 +147,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "00e6af38-7bf3-4219-a34f-c59e42d130aa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "s.add(book)\n",
+    "s.add(page)\n",
     "s.commit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "7a5d9af0-8b34-46c5-a945-e7f02790e577",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Book(title='Deep Learning', author='Ian Goodfellow', pages=775, published=2016-11-18)>"
+       "<Page: (\n",
+       "\t title='Quantum Mechanics',\n",
+       "\t headings[:10]=['Lead', 'Physics', 'Science'],\n",
+       "\t sections[0]=Lead's content,\n",
+       "\t links[:10]=['Albert Einstein', 'String Theory', 'Physics Theories']\n",
+       ")>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s.query(Book).first()"
+    "s.query(Page).first()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "id": "61b79ae4-9b5d-48a9-bb36-533437f00cb2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Book(title='Deep Learning', author='Ian Goodfellow', pages=775, published=2016-11-18)>"
+       "<Page: (\n",
+       "\t title='Quantum Mechanics',\n",
+       "\t headings[:10]=['Lead', 'Physics', 'Science'],\n",
+       "\t sections[0]=Lead's content,\n",
+       "\t links[:10]=['Albert Einstein', 'String Theory', 'Physics Theories']\n",
+       ")>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# filter BY\n",
-    "s.query(Book).filter_by(title=\"Deep Learning\").first()"
+    "s.query(Page).filter_by(title=\"Quantum Mechanics\").first()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "cd5fcd52-af69-4f9c-8bf4-33d40dd8138c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Book(title='Deep Learning', author='Ian Goodfellow', pages=775, published=2016-11-18)>"
+       "<Page: (\n",
+       "\t title='Quantum Mechanics',\n",
+       "\t headings[:10]=['Lead', 'Physics', 'Science'],\n",
+       "\t sections[0]=Lead's content,\n",
+       "\t links[:10]=['Albert Einstein', 'String Theory', 'Physics Theories']\n",
+       ")>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# filter\n",
-    "s.query(Book).filter(Book.title==\"Deep Learning\").first()"
+    "s.query(Page).filter(Page.title==\"Quantum Mechanics\").first()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "5269de87-b46c-468b-93d1-b2c5d059a755",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<Book(title='Deep Learning', author='Ian Goodfellow', pages=775, published=2016-11-18)>]"
+       "[<Page: (\n",
+       " \t title='Quantum Mechanics',\n",
+       " \t headings[:10]=['Lead', 'Physics', 'Science'],\n",
+       " \t sections[0]=Lead's content,\n",
+       " \t links[:10]=['Albert Einstein', 'String Theory', 'Physics Theories']\n",
+       " )>]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s.query(Book).limit(2).all()"
+    "s.query(Page).limit(2).all()"
    ]
   }
  ],
