got database etl flow to work slow, but it works.

--- a/notebooks/database.ipynb
+++ b/notebooks/database.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2b87c67b-a9b5-49cf-a745-d0d9894bad37",
    "metadata": {},
    "outputs": [],
@@ -52,10 +52,14 @@
     "    headings = Column(ARRAY(String(200)))\n",
     "    sections = Column(ARRAY(Text()))\n",
     "    links = Column(ARRAY(String(200)))\n",
-    "    \n",
+    "    # everything\n",
     "    def __repr__(self):\n",
-    "        return \"<Page: (\\n\\t title='{}',\\n\\t headings[:10]={},\\n\\t sections[0]={},\\n\\t links[:10]={}\\n)>\"\\\n",
-    "                .format(self.title, self.headings[:10], self.sections[0], self.links[:10])"
+    "        return \"<Page: (\\n\\t title='{}',\\n\\t headings={},\\n\\t sections={},\\n\\t links={}\\n)>\"\\\n",
+    "                .format(self.title, self.headings, self.sections, self.links)\n",
+    "    # some\n",
+    "#     def __repr__(self):\n",
+    "#         return \"<Page: (\\n\\t title='{}',\\n\\t headings[:10]={},\\n\\t sections[0]={},\\n\\t links[:10]={}\\n)>\"\\\n",
+    "#                 .format(self.title, self.headings[:10], self.sections[0], self.links[:10])"
    ]
   },
   {
@@ -89,6 +93,21 @@
     "def recreate_database():\n",
     "    Base.metadata.drop_all(engine)\n",
     "    Base.metadata.create_all(engine)\n",
+    "    \n",
+    "def create_dummy_entry():\n",
+    "    #     title = Column(String(200), primary_key=True)\n",
+    "    #     headings = Column(ARRAY(String(200)))\n",
+    "    #     sections = Column(ARRAY(Text()))\n",
+    "    #     links = Column(ARRAY(String(200)))\n",
+    "    s = Session()\n",
+    "    s.add(page)\n",
+    "    s.commit()\n",
+    "    page = Page(\n",
+    "        title = \"Quantum Mechanics\",\n",
+    "        headings = [\"Lead\", \"Physics\", \"Science\"],\n",
+    "        sections = [\"Lead's content\", \"Science's content\", \"Physics's content\"],\n",
+    "        links = [\"Albert Einstein\", \"String Theory\", \"Physics Theories\"]\n",
+    "    )\n",
     "\n",
     "engine = create_engine(DATABASE_URI)\n",
     "Session = sessionmaker(bind=engine)"
@@ -96,122 +115,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "4f6f40b2-9210-4150-a723-b020bd201966",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Base.metadata.create_all(engine)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "c9dc7c2f-8998-40ff-a1a6-005f99126533",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Base.metadata.drop_all(engine)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "56721f34-9fef-4efd-9931-0b9931110541",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#     title = Column(String(200), primary_key=True)\n",
-    "#     headings = Column(ARRAY(String(200)))\n",
-    "#     sections = Column(ARRAY(Text()))\n",
-    "#     links = Column(ARRAY(String(200)))\n",
-    "\n",
-    "page = Page(\n",
-    "    title = \"Quantum Mechanics\",\n",
-    "    headings = [\"Lead\", \"Physics\", \"Science\"],\n",
-    "    sections = [\"Lead's content\", \"Science's content\", \"Physics's content\"],\n",
-    "    links = [\"Albert Einstein\", \"String Theory\", \"Physics Theories\"]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "aec3e2be-1995-4978-ac46-fcbc27e809ea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "recreate_database()\n",
-    "s = Session()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "00e6af38-7bf3-4219-a34f-c59e42d130aa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s.add(page)\n",
-    "s.commit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "7a5d9af0-8b34-46c5-a945-e7f02790e577",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Page: (\n",
-       "\t title='Quantum Mechanics',\n",
-       "\t headings[:10]=['Lead', 'Physics', 'Science'],\n",
-       "\t sections[0]=Lead's content,\n",
-       "\t links[:10]=['Albert Einstein', 'String Theory', 'Physics Theories']\n",
-       ")>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "s = Session()\n",
     "s.query(Page).first()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "61b79ae4-9b5d-48a9-bb36-533437f00cb2",
+   "execution_count": 11,
+   "id": "6df6b716-10de-4491-8038-829f11c7b2a6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Page: (\n",
-       "\t title='Quantum Mechanics',\n",
-       "\t headings[:10]=['Lead', 'Physics', 'Science'],\n",
-       "\t sections[0]=Lead's content,\n",
-       "\t links[:10]=['Albert Einstein', 'String Theory', 'Physics Theories']\n",
-       ")>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# filter BY\n",
-    "s.query(Page).filter_by(title=\"Quantum Mechanics\").first()"
+    "recreate_database()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "id": "61b79ae4-9b5d-48a9-bb36-533437f00cb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filter BY\n",
+    "s.query(Page).filter_by(title=\"Achilles\").first()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "cd5fcd52-af69-4f9c-8bf4-33d40dd8138c",
    "metadata": {},
    "outputs": [
@@ -220,13 +156,13 @@
       "text/plain": [
        "<Page: (\n",
        "\t title='Quantum Mechanics',\n",
-       "\t headings[:10]=['Lead', 'Physics', 'Science'],\n",
-       "\t sections[0]=Lead's content,\n",
-       "\t links[:10]=['Albert Einstein', 'String Theory', 'Physics Theories']\n",
+       "\t headings=['Lead', 'Physics', 'Science'],\n",
+       "\t sections=[\"Lead's content\", \"Science's content\", \"Physics's content\"],\n",
+       "\t links=['Albert Einstein', 'String Theory', 'Physics Theories']\n",
        ")>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,28 +174,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "5269de87-b46c-468b-93d1-b2c5d059a755",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<Page: (\n",
-       " \t title='Quantum Mechanics',\n",
-       " \t headings[:10]=['Lead', 'Physics', 'Science'],\n",
-       " \t sections[0]=Lead's content,\n",
-       " \t links[:10]=['Albert Einstein', 'String Theory', 'Physics Theories']\n",
-       " )>]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s.query(Page).limit(2).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1a932da1-ae2d-46e8-b2d6-687345a77541",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s.close()"
    ]
   }
  ],
