got complete prefect elt workflow for putting dumps into a postgres db

--- a/db/database-manager.ipynb
+++ b/db/database-manager.ipynb
@@ -59,28 +59,20 @@
     "    # some\n",
     "#     def __repr__(self):\n",
     "#         return \"<Page: (\\n\\t title='{}',\\n\\t headings[:10]={},\\n\\t sections[0]={},\\n\\t links[:10]={}\\n)>\"\\\n",
-    "#                 .format(self.title, self.headings[:10], self.sections[0], self.links[:10])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "b8bae290-1519-4fdb-a312-d079ff191458",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#                 .format(self.title, self.headings[:10], self.sections[0], self.links[:10])\n",
+    "\n",
     "### config.py ###\n",
     "\n",
     "# SQLAlchemy URI documentation: https://docs.sqlalchemy.org/en/14/core/engines.html#database-urls\n",
     "# Scheme: \"postgresql://<USERNAME>:<PASSWORD>@<IP_ADDRESS>:<PORT>/<DATABASE_NAME>\"\n",
     "\n",
-    "DATABASE_URI = 'postgresql://postgres:postgres@localhost:5432/wikipedia'\n",
+    "DATABASE_URI = 'postgresql://postgres:postgres@localhost:8001/wikipedia'\n",
     "# don't worry this is just the local database config. no secret info is in the database running on localhost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "07065a42-c392-44b8-a0f2-24447dc01841",
    "metadata": {},
    "outputs": [],
@@ -126,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "6df6b716-10de-4491-8038-829f11c7b2a6",
    "metadata": {},
    "outputs": [],
