added stuff for mike. doesnt work

--- a/db/database-manager.ipynb
+++ b/db/database-manager.ipynb
@@ -7,7 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sqlalchemy"
+    "import sqlalchemy\n",
+    "from sqlalchemy.orm.exc import NoResultFound"
    ]
   },
   {
@@ -107,23 +108,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7a5d9af0-8b34-46c5-a945-e7f02790e577",
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = Session()\n",
+    "s = Session()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6df6b716-10de-4491-8038-829f11c7b2a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "new\n"
+     ]
+    }
+   ],
+   "source": [
+    "if s.query(Page).filter_by(title=\"West Bretton\").first() is None:\n",
+    "    print(\"new\")\n",
+    "else:\n",
+    "    print(\"duplicate\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d128d8cb-471b-4a24-9da8-447d6e52bf9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "s.query(Page).first()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "6df6b716-10de-4491-8038-829f11c7b2a6",
+   "execution_count": 19,
+   "id": "1df909f6-d70f-4e02-ab78-206a5117a63c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "recreate_database()"
+    "s.query(Page).filter(Page.title == \"Vagococcus silage\").first()"
    ]
   },
   {
