refactored elt_flow, added properties to WikiXMLFile changed docker-compose and database-manager back to port 5432

--- a/database/database-manager.ipynb
+++ b/database/database-manager.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2b87c67b-a9b5-49cf-a745-d0d9894bad37",
    "metadata": {},
    "outputs": [],
@@ -67,13 +67,13 @@
     "# SQLAlchemy URI documentation: https://docs.sqlalchemy.org/en/14/core/engines.html#database-urls\n",
     "# Scheme: \"postgresql://<USERNAME>:<PASSWORD>@<IP_ADDRESS>:<PORT>/<DATABASE_NAME>\"\n",
     "\n",
-    "DATABASE_URI = 'postgresql://postgres:postgres@localhost:8001/wikipedia'\n",
+    "DATABASE_URI = 'postgresql://postgres:postgres@localhost:5432/wikipedia'\n",
     "# don't worry this is just the local database config. no secret info is in the database running on localhost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "07065a42-c392-44b8-a0f2-24447dc01841",
    "metadata": {},
    "outputs": [],
@@ -114,6 +114,16 @@
    "outputs": [],
    "source": [
     "s = Session()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6549fe8d-1d9a-4b95-ad5a-4facb23c263e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recreate_database()"
    ]
   },
   {
