cleaned up old files, updated models so lowercase of title is indexed

--- a/database/database-manager.ipynb
+++ b/database/database-manager.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "c80b08e5-051a-4dbf-8cc4-118af9048f13",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sqlalchemy\n",
-    "from sqlalchemy.orm.exc import NoResultFound"
+    "from sqlalchemy.orm.exc import NoResultFound\n",
+    "from sqlalchemy.ext.declarative import declarative_base"
    ]
   },
   {
@@ -180,29 +181,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "cd5fcd52-af69-4f9c-8bf4-33d40dd8138c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Page: (\n",
-       "\t title='Quantum Mechanics',\n",
-       "\t headings=['Lead', 'Physics', 'Science'],\n",
-       "\t sections=[\"Lead's content\", \"Science's content\", \"Physics's content\"],\n",
-       "\t links=['Albert Einstein', 'String Theory', 'Physics Theories']\n",
-       ")>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# filter\n",
-    "s.query(Page).filter(Page.title==\"Quantum Mechanics\").first()"
+    "s.query(Page).filter(Page.title==\"Quantum mechanics\").first()"
    ]
   },
   {
@@ -224,6 +209,71 @@
    "source": [
     "s.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1dfe3349-bb35-46db-afa3-5df4c9f4dcb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test of Wikipedia pages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c91a33cf-bff9-48be-93e3-fab27abccdaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from models import Page\n",
+    "from config import get_sessionmaker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5ee409aa-6470-446d-9b2e-077f3b4831c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATABASE_URI = \"postgresql://postgres:postgres@localhost:5432/complete_wikipedia\"\n",
+    "Base = declarative_base()\n",
+    "Session = get_sessionmaker(db_uri=DATABASE_URI)\n",
+    "s = Session()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "8a54ed52-dc36-4aab-bf4c-ac39c39791e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The domestic dog (Canis familiaris or Canis lupus familiaris) is a domesticated  wolf. The dog descended from an ancient, extinct, species of wolf, with the modern grey wolf being the dog\\'s nearest living relative. The dog was the first species to be domesticated by hunter-gatherers over 15,000 years ago, before the development of agriculture. Their long association with humans has led dogs to be uniquely adapted to human behavior, leading to a large number of domestic individuals and the ability to thrive on a starch-rich diet that would be inadequate for other canids. \\n\\nThe dog has been selectively bred over millennia for various behaviors, sensory capabilities, and physical attributes. Dogs are subclassified into breeds, which vary widely in shape, size and color.Why are different breeds of dogs all considered the same species? - Scientific American .  Nikhil Swaminathan. Accessed on 28 August 2016. They perform many roles for humans, such as hunting, herding, pulling loads, protection, assisting police and the military, companionship, therapy, and aiding disabled people. This influence on human society has given them the sobriquet of \"man\\'s best friend.\"'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.query(Page).filter(Page.title==\"Dog\").first().sections[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c2de0907-4a1d-476a-a97e-459b2ee7a8c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results"
+   ]
   }
  ],
  "metadata": {
@@ -242,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8+"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
