updated models and added methods to load

--- a/database/database-manager.ipynb
+++ b/database/database-manager.ipynb
@@ -48,19 +48,19 @@
     "\n",
     "Base = declarative_base()\n",
     "\n",
-    "class Page(Base):\n",
-    "    __tablename__ = 'pages'\n",
+    "class PageText(Base):\n",
+    "    __tablename__ = 'text'\n",
     "    title = Column(String(200), primary_key=True)\n",
     "    headings = Column(ARRAY(String(200)))\n",
     "    sections = Column(ARRAY(Text()))\n",
     "    links = Column(ARRAY(String(200)))\n",
     "    # everything\n",
     "    def __repr__(self):\n",
-    "        return \"<Page: (\\n\\t title='{}',\\n\\t headings={},\\n\\t sections={},\\n\\t links={}\\n)>\"\\\n",
+    "        return \"<PageText: (\\n\\t title='{}',\\n\\t headings={},\\n\\t sections={},\\n\\t links={}\\n)>\"\\\n",
     "                .format(self.title, self.headings, self.sections, self.links)\n",
     "    # some\n",
     "#     def __repr__(self):\n",
-    "#         return \"<Page: (\\n\\t title='{}',\\n\\t headings[:10]={},\\n\\t sections[0]={},\\n\\t links[:10]={}\\n)>\"\\\n",
+    "#         return \"<PageText: (\\n\\t title='{}',\\n\\t headings[:10]={},\\n\\t sections[0]={},\\n\\t links[:10]={}\\n)>\"\\\n",
     "#                 .format(self.title, self.headings[:10], self.sections[0], self.links[:10])\n",
     "\n",
     "### config.py ###\n",
@@ -96,7 +96,7 @@
     "    s = Session()\n",
     "    s.add(page)\n",
     "    s.commit()\n",
-    "    page = Page(\n",
+    "    page = PageText(\n",
     "        title = \"Quantum Mechanics\",\n",
     "        headings = [\"Lead\", \"Physics\", \"Science\"],\n",
     "        sections = [\"Lead's content\", \"Science's content\", \"Physics's content\"],\n",
@@ -142,7 +142,7 @@
     }
    ],
    "source": [
-    "if s.query(Page).filter_by(title=\"West Bretton\").first() is None:\n",
+    "if s.query(PageText).filter_by(title=\"West Bretton\").first() is None:\n",
     "    print(\"new\")\n",
     "else:\n",
     "    print(\"duplicate\")"
@@ -155,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s.query(Page).first()"
+    "s.query(PageText).first()"
    ]
   },
   {
@@ -165,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s.query(Page).filter(Page.title == \"Vagococcus silage\").first()"
+    "s.query(PageText).filter(PageText.title == \"Vagococcus silage\").first()"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "outputs": [],
    "source": [
     "# filter BY\n",
-    "s.query(Page).filter_by(title=\"Achilles\").first()"
+    "s.query(PageText).filter_by(title=\"Achilles\").first()"
    ]
   },
   {
@@ -187,7 +187,7 @@
    "outputs": [],
    "source": [
     "# filter\n",
-    "s.query(Page).filter(Page.title==\"Quantum mechanics\").first()"
+    "s.query(PageText).filter(PageText.title==\"Quantum mechanics\").first()"
    ]
   },
   {
@@ -197,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s.query(Page).limit(2).all()"
+    "s.query(PageText).limit(2).all()"
    ]
   },
   {
@@ -227,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from models import Page\n",
+    "from models import PageText\n",
     "from config import get_sessionmaker"
    ]
   },
@@ -262,7 +262,7 @@
     }
    ],
    "source": [
-    "s.query(Page).filter(Page.title==\"Dog\").first().sections[0]"
+    "s.query(PageText).filter(PageText.title==\"Dog\").first().sections[0]"
    ]
   },
   {
