--- a/database/link-statistics.ipynb
+++ b/database/link-statistics.ipynb
@@ -16,13 +16,10 @@
     "import seaborn as sns\n",
     "\n",
     "import sqlalchemy\n",
-    "from sqlalchemy import func\n",
-    "from sqlalchemy.orm.exc import NoResultFound\n",
-    "from sqlalchemy.ext.declarative import declarative_base\n",
     "from sqlalchemy import Column, Text, String\n",
     "from sqlalchemy.dialects.postgresql import ARRAY\n",
     "\n",
-    "from models import Page\n",
+    "from models import PageText\n",
     "from config import get_sessionmaker"
    ]
   },
@@ -33,9 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# redefine instead of importing from models.py because we need to access the wikipedia-complete db\n",
     "DATABASE_URI = \"postgresql://postgres:postgres@localhost:5432/complete_wikipedia\"\n",
-    "Base = declarative_base()\n",
     "Session = get_sessionmaker(db_uri=DATABASE_URI)\n",
     "s = Session()"
    ]
@@ -75,7 +70,7 @@
     "    total_results = 0\n",
     "    while True:\n",
     "        print(f\"starting query with offset {offset}\")\n",
-    "        results = s.query(Page).offset(offset).limit(limit)\n",
+    "        results = s.query(PageText).offset(offset).limit(limit)\n",
     "        results_len = results.count()\n",
     "        total_results += results_len\n",
     "        print(f\"counted {total_results}\")\n",
@@ -94,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "links = s.query(Page).filter(Page.title==\"Quantum mechanics\").first().links"
+    "links = s.query(PageText).filter(PageText.title==\"Quantum mechanics\").first().links"
    ]
   },
   {
@@ -448,12 +443,10 @@
     }
    ],
    "source": [
-    "%timeit\n",
-    "# using func.lower for both model and link\n",
     "# tldr: this is now fast with lowercase index\n",
     "none_links = []\n",
     "for link in links:\n",
-    "    search = s.query(Page).filter_by(title_insensitive=link).first()\n",
+    "    search = s.query(PageText).filter_by(title_insensitive=link).first()\n",
     "    if search is None:\n",
     "        none_links.append(link)\n",
     "    else: \n",
@@ -558,7 +551,7 @@
     "total_results = 0\n",
     "while True:\n",
     "    print(f\"starting query with offset {offset}\")\n",
-    "    results = s.query(Page).offset(offset).limit(limit)\n",
+    "    results = s.query(PageText).offset(offset).limit(limit)\n",
     "    for result in results:\n",
     "        try:\n",
     "            \n",
