--- a/database/section-statistics.ipynb
+++ b/database/section-statistics.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "from transformers import BigBirdTokenizer\n",
     "\n",
-    "from models import Page\n",
+    "from models import PageText\n",
     "from config import get_sessionmaker"
    ]
   },
@@ -79,7 +79,7 @@
     "    total_results = 0\n",
     "    while True:\n",
     "        print(f\"starting query with offset {offset}\")\n",
-    "        results = s.query(Page).offset(offset).limit(limit)\n",
+    "        results = s.query(PageText).offset(offset).limit(limit)\n",
     "        results_len = results.count()\n",
     "        total_results += results_len\n",
     "        print(f\"counted {total_results}\")\n",
@@ -175,7 +175,7 @@
     "unk_count = 0\n",
     "while True:\n",
     "    print(f\"starting query with offset {offset}\")\n",
-    "    results = s.query(Page).offset(offset).limit(limit)\n",
+    "    results = s.query(PageText).offset(offset).limit(limit)\n",
     "    for result in results:\n",
     "        try:\n",
     "            encoding = tokenizer.encode(\n",
